Fixed contours connection.

--- a/scene.html
+++ b/scene.html
@@ -625,7 +625,7 @@
 			                		{
 			                			var newId = intersectionIndexes[0];
 			                			if(intersectionsInfo[newId].checked)
-			                				return false;
+			                				continue;
 
 			                			intersectionFoundHandler();
 			                			index = newId;
